--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -6,7 +6,8 @@ $secondaryColor: #03658C;
 $keyColor: black;
 
 //fonts
-$mainFont:'Montserrat', sans-serif;
+$mainFont:
+'Montserrat', sans-serif;
 
 //sizing
 $textSm: 0.8em;
