--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -308,6 +308,7 @@
                             font-family: 'Montserrat', sans-serif;
                             font-weight: 700;
                             font-size: 1.2em;
+                            text-align: center;
                         }
 
                         .nombre-producto-producto {
